# trail_tracer

./: README.md  README.txt  local_nav2_no_map_params.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/argo_nav/share/argo_nav/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/argo_sim/share/argo_sim/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/biy1_ros360_cpp/lib/biy1_ros360_cpp/: code_test  examplePublisher  exampleSubscriber  nav2
install/biy1_ros360_cpp/share/biy1_ros360_cpp/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/costmap_queue/share/costmap_queue/: local_setup.sh  package.sh
install/dwb_core/share/dwb_core/: local_setup.sh  package.sh
install/dwb_critics/share/dwb_critics/: package.sh
install/dwb_msgs/share/dwb_msgs/: package.sh
install/dwb_plugins/share/dwb_plugins/: package.sh
install/gazebo_ros_ackermann_drive_4wd/share/gazebo_ros_ackermann_drive_4wd/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/gazebo_ros_skid_steer_drive_6w/include/: gazebo_ros_skid_steer_drive_6w.h
install/gazebo_ros_skid_steer_drive_6w/share/gazebo_ros_skid_steer_drive_6w/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/gps_to_utm_converter_cpp/lib/gps_to_utm_converter_cpp/: converter_node
install/gps_to_utm_converter_cpp/share/gps_to_utm_converter_cpp/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/nav2_amcl/lib/nav2_amcl/: amcl
install/nav2_amcl/share/nav2_amcl/: local_setup.sh  package.sh
install/nav2_behavior_tree/share/nav2_behavior_tree/: local_setup.sh  package.sh
install/nav2_behaviors/lib/nav2_behaviors/: behavior_server
install/nav2_behaviors/share/nav2_behaviors/: local_setup.sh  package.sh
install/nav2_bringup/share/nav2_bringup/: package.sh
install/nav2_bt_navigator/lib/nav2_bt_navigator/: bt_navigator
install/nav2_bt_navigator/share/nav2_bt_navigator/: package.sh
install/nav2_collision_monitor/lib/nav2_collision_monitor/: collision_monitor
install/nav2_collision_monitor/share/nav2_collision_monitor/: local_setup.sh  package.sh
install/nav2_common/share/nav2_common/: local_setup.sh  package.sh
install/nav2_constrained_smoother/share/nav2_constrained_smoother/: local_setup.sh  package.sh
install/nav2_controller/lib/nav2_controller/: controller_server
install/nav2_controller/share/nav2_controller/: package.sh
install/nav2_core/share/nav2_core/: local_setup.sh  package.sh
install/nav2_costmap_2d/lib/nav2_costmap_2d/: nav2_costmap_2d  nav2_costmap_2d_cloud  nav2_costmap_2d_markers
install/nav2_costmap_2d/share/nav2_costmap_2d/: local_setup.sh  package.sh
install/nav2_dwb_controller/share/nav2_dwb_controller/: local_setup.sh  package.sh
install/nav2_graceful_controller/share/nav2_graceful_controller/: local_setup.sh  package.sh
install/nav2_lifecycle_manager/lib/nav2_lifecycle_manager/: lifecycle_manager
install/nav2_lifecycle_manager/share/nav2_lifecycle_manager/: local_setup.sh  package.sh
install/nav2_map_server/lib/nav2_map_server/: costmap_filter_info_server  map_saver_cli  map_saver_server  map_server
install/nav2_map_server/share/nav2_map_server/: local_setup.sh  package.sh
install/nav2_mppi_controller/share/nav2_mppi_controller/: local_setup.sh  package.sh
install/nav2_msgs/share/nav2_msgs/: local_setup.sh  package.sh
install/nav2_navfn_planner/share/nav2_navfn_planner/: package.sh
install/nav2_planner/lib/nav2_planner/: planner_server
install/nav2_planner/share/nav2_planner/: package.sh
install/nav2_regulated_pure_pursuit_controller/share/nav2_regulated_pure_pursuit_controller/: package.sh
install/nav2_rotation_shim_controller/share/nav2_rotation_shim_controller/: local_setup.sh  package.sh
install/nav2_rviz_plugins/share/nav2_rviz_plugins/: local_setup.sh  package.sh
install/nav2_simple_commander/share/nav2_simple_commander/: package.sh
install/nav2_smac_planner/share/nav2_smac_planner/: local_setup.sh  package.sh
install/nav2_smoother/lib/nav2_smoother/: smoother_server
install/nav2_smoother/share/nav2_smoother/: local_setup.sh  package.sh
install/nav2_system_tests/lib/nav2_system_tests/: test_updown
install/nav2_system_tests/share/nav2_system_tests/: package.sh
install/nav2_theta_star_planner/share/nav2_theta_star_planner/: package.sh
install/nav2_util/lib/nav2_util/: lifecycle_bringup
log/: latest_build  latest_list
src/biy1_ros360_cpp/: CMakeLists.txt
src/biy1_ros360_cpp/src/: code_test.cpp  examplePublisher.cpp  exampleSubscriber.cpp  follower.cpp  helloWorld.cpp  polishedCode.cpp  sparse.cpp  testCode.cpp  trail_tracer.cpp  waypoint_navigator.cpp
src/biy1_ros360_cpp/src/ros2_examples_cpp/: templatePubSub.cpp
src/gps_to_utm_converter_cpp/: CMakeLists.txt
src/gps_to_utm_converter_cpp/src/: converter_node.cpp
src/trail_tracer/: CMakeLists.txt  package.xml
src/trail_tracer/src/: nav2.cpp  polishedCode.cpp  refactor.cpp  trail_tracer.cpp
src/web_gui/: app.py  setup.cfg  setup.py
src/web_gui/static/: cam.css  camera.js
src/web_gui/templates/: camera.html  index.html  traethlin.html  user_guide.html
src/web_gui/web_gui/: ros2_communication.py
trails/: DWD.txt  The_long_way.txt  aa.txt  aber_uni_porters.txt  across.txt  arrow.txt  arrow_tree.txt  arrowf.txt  back.txt  back2.1.txt  bb.txt  cc.txt  cece.txt  chair.txt  chairs.txt  circle.txt  close.txt  cluster.txt  code.txt  corner.txt  dwdw.txt  error.txt  error2.txt  five.txt  five_points.txt  food.txt  four.txt  gfsfsg.txt  gps_fix2.txt  gps_new.txt  grass.txt  hi.txt  hugh.txt  hugh_owen.txt  hump.txt  hump2  hybrid.txt  j.txt  kalkun.txt  ku.txt  (+49 more)
(+146 files in other folders)
