<?xml version="1.0"?>
<package format="2">
  <name>gazebo_ros_skid_steer_drive_6w</name>
  <version>0.5.4</version>
  <description>A skid steering drive plugin. Inspired by gazebo_ros_diff_drive and SkidSteerDrivePlugin.</description>
  <maintainer email="ffl@aber.ac.uk">Fred Labrosse</maintainer>

  <license>BSD</license>

  <author email="kohlbrecher@sim.tu-darmstadt.de">Stefan Kohlbrecher</author>
  <author email="meyer@fsr.tu-darmstadt.de">Johannes Meyer</author>
  <author email="ffl@aber.ac.uk">Fred Labrosse</author>

  <!-- Dependencies needed to compile this package. -->
  <depend>rclcpp</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_ros</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <!-- Dependencies needed after this package is compiled. -->
  <exec_depend>message_runtime</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
